Switched to Zach's Database

--- a/src/main/resources/application-neon.properties
+++ b/src/main/resources/application-neon.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://ep-calm-paper-414861.us-east-2.aws.neon.tech/neondb
-spring.datasource.username=Ashley623
-spring.datasource.password=yuAd0rYxo9lZ
+spring.datasource.url=jdbc:postgresql://ep-nameless-sound-156312.us-east-2.aws.neon.tech/neondb
+spring.datasource.username=zhyoung812
+spring.datasource.password=92GvdHhzsxmn
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
